Mon Mar 16 08:49:25 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: roll back to avoid possible core in OpenSSL code

Wed Mar 11 10:07:02 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/bcp.c: avoid memory corruption on out of memory

Mon Mar  9 21:53:46 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* TODO.freddy src/odbc/unittests/genparams.c: add test for binary

Mon Mar  9 21:35:38 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* TODO.freddy src/odbc/unittests/genparams.c:
	- add test for NULL input data

Fri Mar  6 21:18:28 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/query.c: fix really stupid core

Fri Mar  6 18:34:12 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/sql2tds.c src/odbc/unittests/genparams.c:
	- add and fix test for text

Fri Mar  6 15:30:58 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/config.c: fix kerberos login with no freetds.conf

Fri Mar  6 10:13:41 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/putdata.c: just some comments

Fri Mar  6 03:27:07 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/query.c: fix genparams test for Sybase

Fri Mar  6 02:52:12 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/query.c: fix putdata test for Sybase

Wed Mar  4 18:51:16 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c: remove a warning and change style

Wed Mar  4 18:40:56 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c: make it compile

Mon Mar  2 08:58:31 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* win32/msvc6/libTDS.dsp: add needed files

Mon Mar  2 00:09:58 EST 2009	JK Lowden <jklowden@freetds.org>
	* src/dblib/bcp.c src/dblib/dblib.c
	* samples/bcp_test.cpp samples/Makefile.bcp_test
	- bcp_init sets default values for host file columns
	- if host_filename is not NULL.
