@@ -1,3 +1,7 @@
+Mon Mar 16 13:18:31 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/unittests/common.c: disable buffering
+	* src/odbc/unittests/const_params.c: fix for MS ODBC
+
 Mon Mar 16 08:49:25 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/tds/net.c: roll back to avoid possible core in OpenSSL code
 
@@ -1401,4 +1405,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2749 2009/03/16 07:49:57 freddy77 Exp $
+$Id: ChangeLog,v 1.2750 2009/03/16 12:18:59 freddy77 Exp $
